--- a/src/apollo/core/templates/core/dashboard_status_breakdown.html
+++ b/src/apollo/core/templates/core/dashboard_status_breakdown.html
@@ -7,8 +7,7 @@
 <div class="row">
   <div class="span12">
       <div class="well" style="padding-bottom:0">
-          <form action="" method="post" accept-charset="utf-8" id="filter">
-              {% csrf_token %}
+          <form action="{{ request.get_full_path }}" method="get" accept-charset="utf-8" id="filter">
               <div class="controls controls-row">
                 {% if perms.core.view_activities %}{{ filter_form.activity }}{% endif %}
                 {{ filter_form.sample }}
