--- a/src/apollo/core/templates/core/submission_list.html
+++ b/src/apollo/core/templates/core/submission_list.html
@@ -13,18 +13,41 @@
 </div>
 {% endif %}
 {% if perms.core.export_submissions %}
+
+<form action="{{ request.get_full_path }}" method="get" id="export_observer_submissions" style="display:none">
+{% for key, value in request.GET.items %}
+{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
+{% endfor %}
+<input type="hidden" name="export" value="observers" />
+</form>
+
 <div class="btn-group pull-right">
-  <a class="btn" href="{% url submissions_list_export_observers form.pk %}">{% trans "Export" context "verb" %}</a>
+  <a class="btn" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Export" context "verb" %}</a>
 </div>
 {% endif %}
 {% else %}
 {% if perms.core.export_submissions %}
+
+<form action="{{ request.get_full_path }}" method="get" id="export_observer_submissions" style="display:none">
+{% for key, value in request.GET.items %}
+{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
+{% endfor %}
+<input type="hidden" name="export" value="observers" />
+</form>
+
+<form action="{{ request.get_full_path }}" method="get" id="export_master_submissions" style="display:none">
+{% for key, value in request.GET.items %}
+{% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
+{% endfor %}
+<input type="hidden" name="export" value="master" />
+</form>
+
 <div class="btn-group pull-right">
-  <a class="btn" href="{% url submissions_list_export_master form.pk %}">{% trans "Export" context "verb" %}</a>
+  <a class="btn" href="javascript:document.getElementById('export_master_submissions').submit()">{% trans "Export" context "verb" %}</a>
   <button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a href="{% url submissions_list_export_observers form.pk %}">{% trans "Observers Data" %}</a></li>
-    <li><a href="{% url submissions_list_export_master form.pk %}">{% trans "Master Data" %}</a></li>
+    <li><a href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Observers Data" %}</a></li>
+    <li><a href="javascript:document.getElementById('export_master_submissions').submit()">{% trans "Master Data" %}</a></li>
   </ul>
 </div>
 {% endif %}
