--- a/src/apollo/core/templates/core/analysis_menu.html
+++ b/src/apollo/core/templates/core/analysis_menu.html
@@ -1,5 +1,5 @@
 {% load i18n %}{% if forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Analysis" context "adjective" %} <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Analyses" context "adjective" %} <b class="caret"></b></a>
     <ul class="dropdown-menu">
         <li class="dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-tasks"></i> Process</a>
            <ul class="dropdown-menu">
