inserted a script to reload dashboard and dashboard status breakdown pages after 5 mins

--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -2,6 +2,20 @@
 {% block javascripts %}
 {{ block.super }}
 <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
+<script type="text/javascript">
+  var time = new Date().getTime();
+     $(document.body).bind("mousemove keypress", function(e) {
+         time = new Date().getTime();
+     });
+
+     function refresh() {
+         if(new Date().getTime() - time >= 300000) 
+             window.location.reload(true);
+         else 
+             setTimeout(refresh, 10000);
+     }
+     setTimeout(refresh, 10000);
+</script>
 {% endblock %}
 {% block content %}
 <div class="row">
