saving checklists should return to the previous lists screen with preserved filters

--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -245,7 +245,7 @@
     </div>
   </div>
 {% endif %}
-  </form>
+  <input type="hidden" name="next_url" value="{{ next_url }}" /></form>
 {% endwith %}
 
 {% if submission.form.type == 'CHECKLIST' %}
